# renderdoc-mcp

./: .gitignore  AGENTS.md  MCP_OPTIMIZATION_PLAN.md  README.md  SKILL_OPTIMIZATION_PLAN.md  pyproject.toml  questions.md
bridge_extension/renderdoc_mcp_bridge/: __init__.py  extension.json  observe.py  request_handler.py  ruri_shader_processors.py  server.py
docs/: arch.md  bridge.md  capture_context.md  checklist.md  contracts.md  feat-tree.md  m1-offline.md  m2-server.md  m4-find.md  m5-live.md  m6-pipe.md  m7-shader.md  m8-texuse.md  m9-mesh.md  renderdoc_mcp_checklist.md  schema.md  tools.md  ue_renderdoc_workflow.md  workflow.md  workflow_pass_pipeline.md
fixtures/requests/: cap_status.json  capture_context.json  compare_capture_contexts.json  compare_draw_packets.json  compare_packet_artifacts.json  compare_pass_lists.json  compare_texture_usage_artifacts.json  draw_pkt.json  find.json  find_sum_req.json  frame_pkt.json  list_caps.json  list_passes.json  mesh.json  open_capture.json  pass_pkt.json  pipeline_state.json  shader.json  shader_code.json  shader_disasm.json  shader_source.json  texture_usage.json
fixtures/responses/: draw_packet_a.json  draw_packet_b.json  find_sum.json  packet_a.json  packet_b.json  passes_a.json  passes_b.json  texuse_a.json  texuse_b.json
reports/: action-4339-reverse-zh.md
scripts/: bridge_req.py  install_ext.py
skills/renderdoc-analysis/: SKILL.md
src/renderdoc_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_bridge_client.py  test_cli.py  test_runtime.py  test_texture.py
(+65 files in other folders)
