[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "renderdoc-mcp"
version = "0.1.0"
description = "TA-focused RenderDoc MCP workspace"
requires-python = ">=3.11"
dependencies = [
  "fastmcp>=3.2.0",
]

[project.scripts]
renderdoc-mcp = "renderdoc_mcp.server.runtime:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
